maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:5: error: not found: value aBisctuit
  while (!aBisctuit(x,y)) {
          ^JediEscaper:13: error: value NORT is not a member of object plm.universe.Direction
  var dir:Direction = Direction.NORT
                                ^JediEscaper:15: error: too many arguments for method trouverCaseN: (x: Int, y: Int)Boolean
    if (trouverCaseN(x,y,p)) {setIndication(x,y-1,p);recc(x,y-1,p+1,false)}
                    ^JediEscaper:29: error: type mismatch;
 found   : (x: Double)Double <and> (x: Float)Float <and> (x: Long)Long <and> (x: Int)Int <and> (x: Char)Int <and> (x: Short)Int <and> (x: Byte)Int
 required: Int
  if (x-1>0) {if (!aMurOuest(x,y) && getIndication(x-,y)==9999) {return true}
                                                    ^